<resources>
    <string name="app_name">Notes</string>
    <string name="add_note">Add Note</string>
    <string name="note_image">Note Image</string>

    <string name="edit_note">Edit Note</string>
    <string name="delete_note">Delete Note</string>
    <string name="search">Search</string>
    <string name="filter_high">Filter High Importance</string>
    <string name="filter_medium">Filter Medium Importance</string>
    <string name="filter_low">Filter Low Importance</string>
    <string name="filter_all">Show All</string>
    <string name="change_language_en" >Change to English</string>
    <string name="change_language_uk" >Change to Ukrainian</string>

    <string-array name="importance_levels">
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>

</resources>

