<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/addNote"
        android:title="@string/add_note"
        android:icon="@android:drawable/ic_input_add"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@android:drawable/ic_menu_search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/filter_high"
        android:title="@string/filter_high"
        app:showAsAction="never" />
    <item
        android:id="@+id/filter_medium"
        android:title="@string/filter_medium"
        app:showAsAction="never" />
    <item
        android:id="@+id/filter_low"
        android:title="@string/filter_low"
        app:showAsAction="never" />
    <item
        android:id="@+id/filter_all"
        android:title="@string/filter_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/change_language_en"
        android:title="@string/change_language_en"
        app:showAsAction="never" />
    <item
        android:id="@+id/change_language_uk"
        android:title="@string/change_language_uk"
        app:showAsAction="never" />
</menu>
